<resources>
    <string name="app_name">xrcs</string>
    <string name="title_work_out">Work out</string>
    <string name="title_manage_workouts">Manage workouts</string>
    <string name="title_stats">Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_bar_symbol">weight_bar_symbol</string>
    <string name="workouttitle">workoutTitle</string>
    <string name="workouttype">workoutType</string>
    <string name="set_display_value">5</string>
    <string name="timed_target_mode_text">Time Target Mode</string>
    <string name="rest_between_value">30s</string>
    <string name="repetitions_value">10</string>
    <string name="set_target_time_value">20s</string>
    <string name="sets_text">Sets</string>
    <string name="rest_between_text">Rest between</string>
    <string name="repetitions_text">Repetitions</string>
    <string name="set_target_time_text">Set target time</string>
    <string name="timer_icon">timer_icon</string>
    <string name="manage_workouts">Manage your workouts</string>
    <string name="create_a_new_workout_text">Create a new workout</string>
    <string name="create_workout_button_text">Create new</string>
    <string name="edit_existing_workouts_text">Select workout to edit</string>
    <string name="welcome_to_xrcs">Welcome to xrcs</string>
    <string name="tldr_text">Please select a workout from the menu below. If you have not yet created a workout, use a default workout or head to the Manage workouts section and do so now :)</string>
    <string name="welcome_text">xrcs is an app for tracking your workout progress using your device\'s camera. It implements a neural network in the backend that keeps track of your position and thus calculate your workout progress from your movement. xrcs has been written as a mini thesis at the Tsinghua University, Beijing. It is entirely experimental. Right now, we only support tracking for pushups and pullups!</string>
    <string name="tldr_heading">TLDR; Get me started!</string>
    <string name="start_workout_button_text">Start Workout!</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="confirm_delete_workout_text">Delete</string>
    <string name="cancel_delete_workout_text">Cancel</string>
    <string name="delete_dialog_title">Delete workout?</string>
    <string name="delete_dialog_message">Are you sure you want to delete this workout?</string>
    <string-array name="static_spinner_selection">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
