<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.xrcs.ManageWorkoutsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_workout_button"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/create_workout_button_text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/create_new_workout_tv"
            app:layout_constraintStart_toStartOf="@+id/create_new_workout_tv"
            app:layout_constraintTop_toBottomOf="@+id/create_new_workout_tv" />

        <TextView
            android:id="@+id/create_new_workout_tv"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/create_a_new_workout_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_existing_workouts_tv"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/edit_existing_workouts_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_workout_button" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/manage_workouts_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_existing_workouts_tv" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
